@@ -5,6 +5,7 @@ New features:
 ~~~~~~~~~~~~~
 - new MetaData storage adaptater a metadata use getter/setter method like
   Title() and setTitle()
+- Fields can now be computed/processed on read and write.
 Bug fixes:
 ~~~~~~~~~~
 - do not raise exception if 2 schemas have a field in common
